k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: yusef/mobilenet-frontend:latest # Replace with your actual image name/tag
        imagePullPolicy: IfNotPresent # Or "Always"
        ports:
        - containerPort: 3000
