k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000 # Port the service will be available on within the cluster
      targetPort: 5000 # Port the container is listening on
  type: ClusterIP
