k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobilenet-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobilenet-frontend
  template:
    metadata:
      labels:
        app: mobilenet-frontend
    spec:
      containers:
        - name: mobilenet-frontend
          image: mobilenet-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mobilenet-frontend-service
spec:
  selector:
    app: mobilenet-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
