k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobilenet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # For backend /api path rewrite
spec:
  rules:
  - host: mobilenet.local
    http:
      paths:
      - path: /api # Matches /api or /api/anything
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
