k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobilenet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mobilenet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobilenet-frontend-service
                port:
                  number: 80
